<resources>
    <string name="app_name">TaxApp</string>
    <string name="all_courses_chip_text">Все курсы</string>
    <string name="my_courses_chip_text">Мои курсы</string>
    <string name="duration_text">%1$d мин.</string>
    <string name="search_hint">Поиск</string>
    <string name="courses_title">Курсы</string>
    <string name="lesson_number">Урок %1$d</string>
    <plurals name="lessons_count">
        <item quantity="one">%1$d урок</item>
        <item quantity="few">%1$d урока</item>
        <item quantity="other">%1$d уроков</item>
    </plurals>
    <string name="study_button_text">Начать обучение</string>
    <string name="lesson_video_content_desc">Lesson Video</string>
    <string name="dot_symbol">•</string>
    <string name="lesson_start_quiz_button">Пройти опрос</string>
    <string name="notes_title">Статьи</string>
    <string name="terms_title">Термины</string>
    <string name="profile_title">Профиль</string>
    <string name="join_text">Войти</string>
    <string name="register_text">Зарегистрироваться</string>
    <string name="email_text">Email</string>
    <string name="password_text">Пароль</string>
    <string name="register_underlined_text"><u>Зарегистрироваться</u></string>
    <string name="join_underlined_text"><u>Войти</u></string>
    <string name="do_you_have_account_text">Уже есть аккаунт?</string>
    <string name="dont_you_have_account_text">Нет аккаунта?</string>
    <string name="memento_logotip">memento_logotip</string>
    <string name="name_hint">Введите ваше имя и фамилию</string>
    <string name="register">Регистрация</string>
    <string name="enter">Вход</string>

    <string name="quiz_button_continue">Далее</string>
    <string name="quiz_button_end">Завершить опрос</string>
    <string name="quiz_currentProgress">%1$d/%2$d</string>
</resources>
