<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Material3.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/courses_title" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupLayout"
            style="@style/Widget.Material3.ChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/allCourses"
                style="@style/Widget.Material3.Chip.Filter.PrimaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_courses_chip_text"
                app:checkedIcon="@null"
                app:chipCornerRadius="30dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/myCourses"
                style="@style/Widget.Material3.Chip.Filter.PrimaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_courses_chip_text"
                app:checkedIcon="@null"
                app:chipCornerRadius="30dp" />
        </com.google.android.material.chip.ChipGroup>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        tools:listitem="@layout/item_course"
        android:layout_height="match_parent" />

</LinearLayout>
